# Genetic-Algorithms

./: .gitignore  CMakeLists.txt  Crossover.cpp  Crossover.h  Individual.cpp  Individual.h  Makefile  Mutation.cpp  Mutation.h  Population.cpp  Population.h  README.md  Selection.cpp  Selection.h  gnuplot.cpp  gnuplot.h  main_test.cpp  max.tmp  min.tmp  test.cpp
Crossover/: Crossover.cpp  Crossover.h
Individual/: CMakeLists.txt  Individual.cpp  Individual.h
Population/: Population.cpp  Population.h
Selection/: Selection.cpp  Selection.h
gnuplot/: CMakeLists.txt  gnuplot.cpp  gnuplot.h
src/: main_test.cpp
src/Individual/: CMakeLists.txt  Individual.cpp  Individual.h
src/Mutation/: Mutation.h
src/Population/: CMakeLists.txt  Population.cpp  Population.h  PopulationBase.cpp  PopulationBase.h
src/gnuplot/: CMakeLists.txt  gnuplot.cpp
src/utils/: CMakeLists.txt  utils.h
utils/: CMakeLists.txt
